# Support-Engineer

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  SECURITY.md  config.env  config.yaml  consulta.py  docker-compose.yml  eslint.config.js  ingesta.py  package-lock.json  package.json  pyproject.toml  start_dashboard.sh
.claude/: settings.json  solid-report.md
.claude/agents/: verifier.md
.claude/commands/: learn.md  review.md
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml  security.yml  unpublish-pages.yml
dashboard/: configfile.py  envfile.py  index.html  server.py  settings_store.py  translation.py
dashboard/assets/css/: styles.css
dashboard/assets/js/: api.js  app.js  dom.js
dashboard/assets/js/views/: commands.js  guardrails.js  lessons.js  settings.js
hooks/: enforce_feedback.py  guardrail_check.py  inject_lessons.py  scan_tool_output.py
src/agentmem/: __init__.py  atomicio.py  config.py  constants.py  feedback_gate.py  guardrails.py  injection.py  lesson.py  mcp_server.py  ports.py  rules_store.py  store.py
tests/: test_dashboard.py  test_feedback_gate.py  test_guardrails.py  test_injection.py  test_lesson.py  test_scan_tool_output.py  test_store_config.py
web/: README.md  index.html  maintenance.html  package-lock.json  package.json  unpublish.html  vite.config.js
web/src/: App.jsx  StateScreen.jsx  store.js  styles.css
web/src/sections/: About.jsx  Cta.jsx  Flow.jsx  Footer.jsx  Hero.jsx  Pipeline.jsx  Stack.jsx  content.js
web/src/ui/: Background.jsx  Grain.jsx  Loader.jsx  ScrollProgress.jsx
